Added a phone number input. Phone number is routed through Twilio. Server now has concurrent calls by generating individual call IDs for reference in the webhook.

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+    +<input type="text" id="phone" placeholder="1234567890" />
     <button id="call">Call</button>
     <script src="/bundle.js"></script>
   </body>
