Added a fun UI. Can now use enter key to call. Fixed phone number not updating by only calling token on first call, then updating the phone number in that identity subsequently.

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
   <body>
-    +<input type="text" id="phone" placeholder="1234567890" />
-    <button id="call">Call</button>
+    <div id="phone">
+      <h1 id="phone-title">VoIPify</h1>
+      <input id="digits" type="tel" placeholder="18008765353" />
+      <button id="call">☎️</button>
+    </div>
     <script src="/bundle.js"></script>
   </body>
 </html>
