--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="phone">
@@ -9,6 +9,6 @@
       <input id="digits" type="tel" placeholder="18008765353" />
       <button id="call">☎️</button>
     </div>
-    <script src="/bundle.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
